HFP-266 Bigger size and fix for overflowing top.

--- a/styles/question.css
+++ b/styles/question.css
@@ -210,7 +210,7 @@
 
 .h5p-question-feedback.h5p-question-popup {
   position: absolute;
-  width: 17em;
+  width: 22em;
   margin: 0;
   background-color: white;
   box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.59);
